cabal-version:       2.2
name:                darkmatter
version:             0.20221206

synopsis:            Dark Matter keeps holds the universe together.
category:            Development
description:         
  A tool to help maintain package universes

homepage:            https://github.com/phadej/dark-matter
license:             GPL-3.0-only
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2018 Oleg Grenrus
build-type:          Simple
tested-with:         GHC==8.4.4

library
  exposed-modules:
    DarkMatter
  build-depends:
    base                 ^>= 4.11 || ^>=4.12,
    bytestring,
    Cabal                ^>= 3.0.0.0,
    cabal-plan           ^>= 0.5.0.0,
    makefile             ^>= 1.1.0.0,
    optparse-applicative ^>= 0.14.0.0,
    text                 ^>= 1.2.3.0,
    process              ^>= 1.6.1.0

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable darkmatter
  main-is:             Main.hs
  build-depends:       base, darkmatter
  hs-source-dirs:      src-exe
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010
